# weaver-bird

./: .eslintignore  .gitignore  AGENTS.md  CLAUDE.md  COLORMAP_TINTING_FIX.md  ENTITY_INTEGRATION_COMPLETE.md  ENTITY_RENDERING_ANALYSIS.md  ENTITY_RENDERING_PHASE1_COMPLETE.md  FEATURE_IDEAS.md  JEM_PARSING_GUIDE.md  KEY_CODE_SECTIONS.md  README.md  TEST_COVERAGE_MATRIX.md  TINTING_VERIFICATION.md  UV_MAPPING_DEBUG.md  entity-model-test-report.json  eslint.config.js  package-lock.json  package.json  stylelint.config.js  test-backend.sh  test-threejs-boxgeometry.js  test-vanilla-jem.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.storybook/: main.ts  preview.tsx
__mocks__/cem/: allay.jem  armadillo.jem  armadillo_baby.jem  armor_layer_1.jem  armor_layer_2.jem  armor_stand.jem  armor_stand_small.jem  arrow.jem  axolotl.jem  bamboo_raft.jem  bamboo_sign.jem  banner.jem  banner_21.3.jem  bat.jem  bat_20.2.jem  bed.jem  bed_head.jem  bee.jem  bee_stinger.jem  bell.jem  bell_21.1.jem  blaze.jem  boat_21.1.jem  boat_patch.jem  bogged.jem  bogged_outer.jem  breeze.jem  breeze_eyes.jem  breeze_wind.jem  breeze_wind_charge.jem  camel.jem  camel_baby_21.4.jem  camel_saddle.jem  cape.jem  cat_collar.jem  cave_spider.jem  chest_boat_21.1.jem  chest_boat_patch.jem  chest_large_19.2.jem  chest_large_21.1.jem  (+218 more)
__mocks__/cem/bamboo/: ceiling_middle_hanging_sign.jem
__mocks__/cem/birch/: wall_hanging_sign.jem
__mocks__/cem/jungle/: ceiling_hanging_sign.jem
__mocks__/disabled_resourcepacks/Blue GrassV2/: pack.mcmeta
__mocks__/disabled_resourcepacks/Colored pots/: pack.mcmeta
__mocks__/disabled_resourcepacks/Stay True/: pack.mcmeta
__mocks__/resourcepacks/: README.md
__mocks__/resourcepacks/FreshAnimations_v1.10.2/: changelog1.10.2.txt  pack.mcmeta
docs/: AI_CONTEXT.md  COLORMAP_WORKER.md  ENTITY_MODEL_STATUS.md  JEM_LOADER_COMPLETE_GUIDE.md  TEXTURE_FLOW_ANALYSIS.md  backend_structure.md  backend_testing_strategy.md  entity_rendering.md  minecraft_resources_guide.md  particle_walkthrough.md  regenerating_block_colors.md
docs/campfire/: ACTUAL_EXTRACTION.json  BLOCK_EMISSIONS.md  COMPLETE_SOLUTION.md  EXPECTED_VS_ACTUAL.md  FILE_INDEX.md  LAVA_PARTICLE_ISSUES.md  OBFUSCATION_MAPPINGS.md  README.md
docs/campfire/java_deobfuscated/: CampfireBlock.java  CampfireBlockEntity.java  CampfireSmokeParticle.java  Particle.java  ParticleEngine.java  ParticleProvider.java  ParticleTypes.java  SimpleParticleType.java  SingleQuadParticle.java  SpriteSet.java
docs/campfire/java_obfuscated/: dvl.java  egn.java  hbs.java  hcy.java  hda.java  hdc.java  hdo.java  hdw.java  me.java  mj.java
scripts/: README.md  extract-cem-templates.ts  rebuildVanillaCache.ts  scrapeBlockColors.ts  scrapeMinecraftColors.ts  test-blocks.ts  test-entity-models.cjs
src/: app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  validation.rs
src-tauri/src/commands/: mod.rs  packs.rs
src-tauri/src/model/: mod.rs
src-tauri/src/util/: animation_typescript_gen.rs  asset_indexer.rs  block_animation_extractor.rs  block_models.rs  block_particle_extractor.rs  block_particle_extractor.rs.bak  block_particle_extractor.rs.bak2  block_test_runner.rs  blockstates.rs  bytecode_parser.rs  java_ast_parser.rs  launcher_detection.rs  mod.rs  pack_scanner.rs  particle_cache.rs  particle_data.rs  particle_physics_extractor.rs  particle_physics_extractor.rs.bak  particle_physics_extractor.rs.bytecode  particle_typescript_gen.rs  texture_index.rs  vanilla_textures.rs  weaver_nest.rs
src/app/BiomeColorCard/: BiomeColorCard.stories.tsx  index.tsx
src/app/ResourcePackCard/: ResourcePackCard.stories.tsx  styles.module.scss
src/components/: COMPONENTS.md  DebugBlockColorList.tsx  MinecraftCSSBlock.stories.tsx
src/components/AssetResults/: assetGrouping.ts  assetGroupingHelpers.ts  index.tsx  styles.module.scss  (+4 more)
src/constants/: biomeCoordinates.ts  blockLightEmission.ts  blockParticleEmissions.ts  colormaps.ts  particlePhysics.ts  vanillaBlockColors.ts
src/docs/: DocsApp.tsx
src/hooks/: useBlockColors.ts
src/lib/: assetGroupingSync.ts  assetGroupingWorker.ts  assetMappings.ts  assetUtils.ts  biomeColors.ts  blockEntityResolver.ts  blockEntityResolverHelpers.ts  blockGeometrySync.ts  colormapManager.ts  colormapSampler.ts  entityVariants.ts  itemDisplayModes.ts  minecartComposite.ts  multiBlockConfig.ts  multiBlockDetection.ts  multiBlockHandlers.ts  packFormatCompatibility.ts  searchUtils.ts  tauri.ts  textureColorization.ts  threeGeometrySync.ts
src/routes/: main.module.scss  main.tsx  mainUtils.ts
src/state/: index.ts  initialState.ts  selectors.ts  store.ts  storeActions.ts  storeImplementations.ts  types.ts
src/ui/: SHADCN_INTEGRATION_GUIDE.md
src/utils/: minecraftColors.ts
src/workers/: assetGrouping.worker.ts  blockGeometry.processing.ts  blockGeometry.utils.ts  blockGeometry.worker.ts  colormapSampler.worker.ts  threeGeometry.worker.ts
(+765 files in other folders)
