[package]
name = "weaverbird"
version = "0.1.0"
description = "Minecraft Resource Pack Manager"
authors = ["Weaverbird Team"]
edition = "2021"
rust-version = "1.60"

[lib]
name = "weaverbird_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "weaverbird"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.5", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-shell = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2"
zip = "0.6"
base64 = "0.21"
dirs = "5.0"
icns = "0.3"
image = "0.24"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
tokio = { version = "1.35", features = ["rt-multi-thread", "fs"] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Development profile - faster recompilation with some optimization
[profile.dev]
opt-level = 1              # Some optimization for dev builds
incremental = true         # Faster recompilation

# Release profile - aggressive optimization for performance
[profile.release]
opt-level = 3              # Optimize for speed (use "s" for size, "z" for smallest)
lto = true                 # Link-time optimization
codegen-units = 1          # Better optimization (slower compile, faster runtime)
panic = "abort"            # Remove panic unwinding overhead
strip = true               # Remove debug symbols from binary
