[package]
name = "weaverbird"
version = "0.1.0"
description = "Minecraft Resource Pack Manager"
authors = ["Weaverbird Team"]
edition = "2021"
rust-version = "1.60"
default-run = "weaverbird"

[lib]
name = "weaverbird_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "weaverbird"
path = "src/main.rs"

[[bin]]
name = "generate_particles"
path = "src/bin/generate_particles.rs"

[[bin]]
name = "rebuild_particle_cache"
path = "src/bin/rebuild_particle_cache.rs"

[[bin]]
name = "extract_block_emissions"
path = "src/bin/extract_block_emissions.rs"

[[bin]]
name = "extract_particle_textures"
path = "src/bin/extract_particle_textures.rs"

[[bin]]
name = "extract_particle_physics"
path = "src/bin/extract_particle_physics.rs"

[[bin]]
name = "extract_block_animations"
path = "src/bin/extract_block_animations.rs"

[[bin]]
name = "generate_animations"
path = "src/bin/generate_animations.rs"

[[bin]]
name = "show_campfire"
path = "src/bin/show_campfire.rs"

[[bin]]
name = "init_vanilla_cache"
path = "src/bin/init_vanilla_cache.rs"

[dependencies]
tauri = { version = "2.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-shell = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2"
zip = "0.6"
base64 = "0.21"
dirs = "5.0"
icns = "0.3"
image = "0.24"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "fs"] }
chrono = "0.4"
cafebabe = "0.3"
tree-sitter = "0.20"
tree-sitter-java = "0.20"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Development profile - faster recompilation with some optimization
[profile.dev]
opt-level = 1              # Some optimization for dev builds
incremental = true         # Faster recompilation

# Release profile - aggressive optimization for performance
[profile.release]
opt-level = 3              # Optimize for speed (use "s" for size, "z" for smallest)
lto = true                 # Link-time optimization
codegen-units = 1          # Better optimization (slower compile, faster runtime)
panic = "abort"            # Remove panic unwinding overhead
strip = true               # Remove debug symbols from binary
